Articleのダミーデータを作成しました！

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,6 +16,9 @@
         </div>
 
         <div class="card_content">
+            <div class="card_title">
+                <%= article.title %>
+            </div>
             <div class="card_heart">
                 <%= image_tag 'heart.svg' %>
                 <span>23</span>
