--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -3,9 +3,16 @@ $heart-size: 16px;
 
 .card{
     background-color: white;
-    margin: 16px 0;
+    margin: 20px auto;
     cursor: pointer;
     box-shadow: 0px 4px 10px rgba(0,0,0,0.25);
+    width: 90%;
+    
+
+    &_title{
+        font-size: 22px;
+        margin-bottom: 8px;
+    }
 
     &_heart{
         display: flex;
