--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import 'card';
 @import 'header';
 @import 'tabs';
+@import 'article';
 
 html{
     word-spacing: 1px;
@@ -30,4 +31,9 @@ body{
 .container{
     padding: 16px 16px;
     width: 100%;
+}
+
+a{
+    text-decoration: none;
+    color: $text-base-color;
 }
