--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,27 +10,29 @@
 </div>
 
 <% @articles.each do |article|  %>
-    <div class="card">
-        <div class="card_image">
-            <%= image_tag 'eyecatch1.png' %>
+    <%= link_to article_path(article) do %>
+        <div class="card">
+            <div class="card_image">
+                <%= image_tag 'eyecatch1.png' %>
+            </div>
+
+            <div class="card_content">
+                <div class="card_title">
+                    <%= article.title %>
+                </div>
+                <div class="card_heart">
+                    <%= image_tag 'heart.svg' %>
+                    <span>23</span>
+                </div>
+
+                <div class="card_detail">
+                    <%= image_tag 'default-avatar.png' %>
+                </div>
+                <div>
+                    <p>coki0305</p>
+                    <p>2020/4/16</p>
+                </div>
         </div>
-
-        <div class="card_content">
-            <div class="card_title">
-                <%= article.title %>
-            </div>
-            <div class="card_heart">
-                <%= image_tag 'heart.svg' %>
-                <span>23</span>
-            </div>
-
-            <div class="card_detail">
-                <%= image_tag 'default-avatar.png' %>
-            </div>
-            <div>
-                <p>coki0305</p>
-                <p>2020/4/16</p>
-            </div>
-    </div>
+    <% end %>
 </div>
 <% end %>
