--- a/css/application.css
+++ b/css/application.css
@@ -1,8 +1,9 @@
 .card {
   background-color: white;
-  margin: 16px 0;
+  margin: 20px auto;
   cursor: pointer;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  width: 90%;
 }
 .card_title {
   font-size: 22px;
@@ -123,6 +124,41 @@
   opacity: 0.9;
 }
 
+.artilce {
+  background-color: white;
+  margin: 16px 16px;
+  padding: 16px 16px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+.artilce_title {
+  font-size: 22px;
+}
+.artilce_detail {
+  padding-top: 10px;
+  cursor: pointer;
+  display: flex;
+  font-size: 12px;
+}
+.artilce_detail img {
+  width: 32px;
+  height: 32px;
+  border-radius: 100%;
+  margin-right: 16px;
+}
+.artilce_content {
+  padding: 24px 0 32px;
+}
+.artilce_heart {
+  position: absolute;
+  right: 16px;
+  bottom: 16px;
+}
+.artilce_heart img {
+  width: 32px;
+  height: 32px;
+}
+
 html {
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
@@ -150,4 +186,9 @@ body {
 .container {
   padding: 16px 16px;
   width: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: #616161;
 }
