new 画面の作成

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,32 +7,37 @@
             タイムライン
         </div>
     </div>
-</div>
+    <% @articles.each do |article|  %>
+        <%= link_to article_path(article) do %>
+            <div class="card">
+                <div class="card_image">
+                    <%= image_tag 'eyecatch1.png' %>
+                </div>
 
-<% @articles.each do |article|  %>
-    <%= link_to article_path(article) do %>
-        <div class="card">
-            <div class="card_image">
-                <%= image_tag 'eyecatch1.png' %>
+                <div class="card_content">
+                    <div class="card_title">
+                        <%= article.title %>
+                    </div>
+                    <div class="card_heart">
+                        <%= image_tag 'heart.svg' %>
+                        <span>23</span>
+                    </div>
+
+                    <div class="card_detail">
+                        <%= image_tag 'default-avatar.png' %>
+                    </div>
+                    <div>
+                        <p>coki0305</p>
+                        <p>2020/4/16</p>
+                    </div>
+                </div>
             </div>
-
-            <div class="card_content">
-                <div class="card_title">
-                    <%= article.title %>
-                </div>
-                <div class="card_heart">
-                    <%= image_tag 'heart.svg' %>
-                    <span>23</span>
-                </div>
-
-                <div class="card_detail">
-                    <%= image_tag 'default-avatar.png' %>
-                </div>
-                <div>
-                    <p>coki0305</p>
-                    <p>2020/4/16</p>
-                </div>
+        <% end %>
+    <% end %>
+    <%= link_to new_article_path do %>
+        <div class="float_btn">
+            <i class="fa fa-plus"></i>
         </div>
     <% end %>
 </div>
-<% end %>
+
