--- a/css/application.css
+++ b/css/application.css
@@ -159,6 +159,16 @@
   height: 32px;
 }
 
+.btn-primary {
+  background-color: #8AC542;
+  border: none;
+  width: 100%;
+  text-align: center;
+  color: white;
+  padding: 16px 0;
+  font-weight: bold;
+}
+
 html {
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
