--- a/app/assets/stylesheets/article.scss
+++ b/app/assets/stylesheets/article.scss
@@ -1,7 +1,7 @@
 $heart-size:32px;
 $avatar-size:32px;
 
-.artilce{
+.article{
     background-color: white;
     margin: 16px 16px;
     padding: 16px 16px;
@@ -14,15 +14,21 @@ $avatar-size:32px;
 
     &_detail{
         padding-top: 10px;
-        cursor: pointer;
         display: flex;
         font-size: 12px;
+        position: relative;
 
         img{
             width: $avatar-size;
             height: $avatar-size;
             border-radius: 100%;
             margin-right: 16px;
+            cursor: pointer;
+        }
+
+        &_actions{
+            right: 0px;
+            position: absolute;
         }
     }
 
