--- a/css/article.css
+++ b/css/article.css
@@ -1,34 +1,39 @@
-.artilce {
+.article {
   background-color: white;
   margin: 16px 16px;
   padding: 16px 16px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   position: relative;
 }
-.artilce_title {
+.article_title {
   font-size: 22px;
 }
-.artilce_detail {
+.article_detail {
   padding-top: 10px;
-  cursor: pointer;
   display: flex;
   font-size: 12px;
+  position: relative;
 }
-.artilce_detail img {
+.article_detail img {
   width: 32px;
   height: 32px;
   border-radius: 100%;
   margin-right: 16px;
+  cursor: pointer;
 }
-.artilce_content {
+.article_detail_actions {
+  right: 0px;
+  position: absolute;
+}
+.article_content {
   padding: 24px 0 32px;
 }
-.artilce_heart {
+.article_heart {
   position: absolute;
   right: 16px;
   bottom: 16px;
 }
-.artilce_heart img {
+.article_heart img {
   width: 32px;
   height: 32px;
 }
