--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -28,7 +28,8 @@
                     </div>
                     <div>
                         <p>coki0305</p>
-                        <p>2020/4/16</p>
+
+                        <p><%= article.display_created_at %></p>
                     </div>
                 </div>
             </div>
