--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 $avatar-size: 16px;
 $heart-size: 16px;
 
@@ -7,7 +9,6 @@ $heart-size: 16px;
     cursor: pointer;
     box-shadow: 0px 4px 10px rgba(0,0,0,0.25);
     width: 90%;
-    
 
     &_title{
         font-size: 22px;
