--- a/css/button.css
+++ b/css/button.css
@@ -7,3 +7,13 @@
   padding: 16px 0;
   font-weight: bold;
 }
+
+.btn-secondary {
+  background-color: white;
+  border: 1px solid #8AC542;
+  width: 100%;
+  text-align: center;
+  color: #8AC542;
+  padding: 16px 0px;
+  font-weight: bold;
+}
