--- a/css/article.css
+++ b/css/article.css
@@ -5,8 +5,14 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   position: relative;
 }
+.article h2 {
+  font-size: 16px;
+}
 .article_title {
   font-size: 22px;
+}
+.article_comment {
+  padding: 12px 0;
 }
 .article_detail {
   padding-top: 10px;
