--- a/css/application.css
+++ b/css/application.css
@@ -58,6 +58,24 @@
   padding: 16px 16px;
   font-weight: bold;
 }
+.header_loginBtn {
+  background-color: rgb(241, 245, 247);
+  height: 40px;
+  border-radius: 8px;
+  font-size: 12px;
+  padding: 12px 16px;
+  color: #8AC542;
+}
+.header_logos {
+  min-width: 0;
+  display: flex;
+}
+.header_logos img {
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
+  margin: 12px 8px 0;
+}
 .header_pageTitle {
   color: white;
   line-height: 40px;
@@ -67,41 +85,6 @@
   width: 40px;
   height: 40px;
   border-radius: 100%;
-}
-
-.dropbtn {
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  font-weight: normal;
-  display: none;
-  right: 0;
-  position: absolute;
-  background-color: white;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  padding: 8px 16px;
-  text-decoration: none;
-  display: block;
-  color: #616161;
-}
-
-.dropdown-content a:hover {
-  background-color: white;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
 }
 
 .tabs {
@@ -124,37 +107,48 @@
   opacity: 0.9;
 }
 
-.artilce {
+.article {
   background-color: white;
   margin: 16px 16px;
   padding: 16px 16px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   position: relative;
 }
-.artilce_title {
+.article h2 {
+  font-size: 16px;
+}
+.article_title {
   font-size: 22px;
 }
-.artilce_detail {
+.article_comment {
+  padding: 12px 0;
+}
+.article_detail {
   padding-top: 10px;
-  cursor: pointer;
   display: flex;
   font-size: 12px;
+  position: relative;
 }
-.artilce_detail img {
+.article_detail img {
   width: 32px;
   height: 32px;
   border-radius: 100%;
   margin-right: 16px;
+  cursor: pointer;
 }
-.artilce_content {
+.article_detail_actions {
+  right: 0px;
+  position: absolute;
+}
+.article_content {
   padding: 24px 0 32px;
 }
-.artilce_heart {
+.article_heart {
   position: absolute;
   right: 16px;
   bottom: 16px;
 }
-.artilce_heart img {
+.article_heart img {
   width: 32px;
   height: 32px;
 }
@@ -166,6 +160,16 @@
   text-align: center;
   color: white;
   padding: 16px 0;
+  font-weight: bold;
+}
+
+.btn-secondary {
+  background-color: white;
+  border: 1px solid #8AC542;
+  width: 100%;
+  text-align: center;
+  color: #8AC542;
+  padding: 16px 0px;
   font-weight: bold;
 }
 
@@ -187,6 +191,75 @@ textarea {
   min-height: 440px;
   resize: vertical;
   border: 1px solid #EBEBEB;
+}
+
+.flash {
+  position: fixed;
+  top: 16px;
+  font-size: 12px;
+  right: 16px;
+  width: 160px;
+  background: white;
+  -webkit-animation: fade-in-out;
+  animation: fade-in-out;
+  visibility: hidden;
+  z-index: 1;
+  padding: 16px;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+}
+
+@-webkit-keyframes fade-in-out {
+  0% {
+    visibility: visible;
+    opacity: 1;
+  }
+  50% {
+    visibility: visible;
+    opacity: 1;
+  }
+  100% {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+.dropbtn {
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  font-weight: normal;
+  display: none;
+  right: 0;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content.mini {
+  min-width: 100px;
+}
+
+.dropdown-content a {
+  padding: 8px 16px;
+  text-decoration: none;
+  display: block;
+  color: #616161;
+}
+
+.dropdown-content a:hover {
+  background-color: white;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 html {
