--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -7,6 +7,7 @@ $image-size:56px;
 
     &_user{
         display: flex;
+        margin-bottom: 32px;
 
         &_image{
             display: flex;
