--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -10,3 +10,7 @@
                     = link_to 'Edit', edit_profile_path 
             .profilePage_user_introduction
                 ああああああああああああああああああああああああああ
+
+
+    - current_user.articles.each do |article|
+        = render 'commons/article', article: article
