--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,7 +1,7 @@
 .article
   %h1.article_title= @article.title
   .article_detail
-    = image_tag @artilce.user.avatar_image
+    = image_tag @article.user.avatar_image
     %div
       %p= @article.author_name
       %p= @article.display_created_at
@@ -14,8 +14,10 @@
             = link_to '削除する', article_path(@article), data: { method: 'delete', confirm: '本当に削除してもいいですか？' }
   .article_cotent
     = @article.content
-  .article_heart
-    = image_tag 'heart.svg'
+  - if user_signed_in?
+    .article_heart
+      = link_to article_like_path(@article), data: { method: 'post' } do
+        = image_tag 'heart.svg'
 
 .article
   %h2 コメント一覧
