--- a/css/header.css
+++ b/css/header.css
@@ -5,12 +5,16 @@
   padding: 16px 16px;
   font-weight: bold;
 }
+.header a {
+  color: white;
+}
 .header_loginBtn {
   background-color: rgb(241, 245, 247);
   height: 40px;
   border-radius: 8px;
   font-size: 12px;
   padding: 12px 16px;
+  color: #8AC542;
 }
 .header_logos {
   min-width: 0;
